# accident-severity-forecast

./: .env.local  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  docker-compose.yaml  localstack-init.sh  pre-commit-test.py
docs/: architecture.md  decisions.md
localstack/: Dockerfile  localstack-init.sh  localstack-shutdown.sh
model-deployment/: Dockerfile  app.py  download_model.py  models.py  pyproject.toml  start.sh
model-deployment/app/: main.py  models.py
model-deployment/tests/: conftest.py  test_app.py  test_models.py
model-deployment/workflows/: config.py  main.py
model-monitoring/: Dockerfile.dagster  init_scripts.py  pyproject.toml
model-monitoring/config/: grafana.ini  grafana_dashboards.yaml  grafana_datasources.yaml
model-monitoring/dashboards/: model_performance.json
model-monitoring/tests/: test_assets.py  test_inference.py  test_utils.py
model-monitoring/tests/fixtures/: interval_dataframe_1.csv  interval_dataframe_2.csv  test_dataframe.csv
model-monitoring/workflows/: assets.py  config.py  definitions.py  inference.py  io.py  report.py  utils.py
model-tracking-registry/: Dockerfile
model-training/: Dockerfile.dagster  Dockerfile.jupyter  pyproject.toml
model-training/tests/: test_utils.py
model-training/tests/fixtures/: test.pkl
model-training/workflows/: assets.py  config.py  definitions.py
model-training/workflows/helpers/: utils.py
notebooks/: pre-commit-test.py  predictive-modeling.ipynb
notebooks/helpers/: models.py  utils.py
workflow-orchestration/: Dockerfile  README.md  pyproject.toml  workspace.yaml
workflow-orchestration/tests/: test_accidents.py  test_utils.py
workflow-orchestration/tests/fixtures/: categorization.yaml  test.yaml  test_accident.csv  test_accident_vehicle_casualty_merged.csv  test_accident_vehicle_casualty_preprocessed.csv  test_accident_vehicle_casualty_unified.csv  test_accident_vehicle_merged.csv  test_casualty.csv  test_mapping.xlsx  test_vehicle.csv
workflow-orchestration/tests/fixtures/raw/: test-dataframe.csv
workflow-orchestration/workflows/: config.py  definitions.py  io.py  jobs.py  schedules.py  utils.py
workflow-orchestration/workflows/assets/: accidents.py
workflow-orchestration/workflows/config/: casualty_severity_prediction.yaml  categorization.yaml
