[tool.poetry]
name = "model-deployment"
version = "0.1.0"
description = ""
authors = ["lerummi <martin.krause.85@gmx.de>"]
license = "MIT"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
mlflow = "^2.5.0"
catboost = "^1.2"
fastapi = {extras = ["all"], version = "^0.101.0"}
boto3 = "^1.28.17"
gunicorn = "20.1.0"
uvicorn = "^0.23.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
