[tool.poetry]
name = "model-training"
version = "0.1.0"
description = ""
authors = ["lerummi <martin.krause.85@gmx.de>"]
license = "MIT"
readme = "README.md"
packages = [{include = "workflows"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
pyarrow = "^12.0.1"
scikit-learn = "^1.3.0"
mlflow = "^2.5.0"
catboost = "^1.2"
tokenizers = "^0.13.3"
pre-commit = "^3.3.3"
seaborn = "^0.12.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
