[tool.poetry]
name = "model-training"
version = "0.1.0"
description = ""
authors = ["lerummi <martin.krause.85@gmx.de>"]
license = "MIT"
packages = [{include = "workflows"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
pyarrow = "^12.0.1"
scikit-learn = "^1.3.0"
mlflow = "^2.5.0"
catboost = "^1.2"
tokenizers = "^0.13.3"
pre-commit = "^3.3.3"
seaborn = "^0.12.2"
boto3 = "^1.28.16"
pydantic = "1.10.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
